feat: melhoria no Swagger
